# SberClassParser

./: .gitignore  README.md  main.py  parce_sberclass.py  pyproject.toml
