[project]
name = "get_marks"
version = "0.1.0"
description = ""
authors = [
    {name = "bobr-ik",email = "aavramenko804@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic (>=2.11.5,<3.0.0)",
    "selenium (>=4.33.0,<5.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "tabulate (>=0.9.0,<0.10.0)",
    "seaborn (>=0.13.2,<0.14.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
